tests/ui/const-generics/issues/issue-75047.min.stderr
error: `[u8; Bar::<u32>::value()]` is forbidden as the type of a const generic parameter
  --> $DIR/issue-75047.rs:14:21
   |
LL | struct Foo<const N: [u8; Bar::<u32>::value()]>;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error: aborting due to 1 previous error

